# blog-pipeline

./: .env.example  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
blog_pipeline/: __init__.py  audit.py  config.py  humanizer.py  pipeline.py
examples/: blog-pipeline-action.yml  help.txt  sample-post.md  test-output.txt
src/: audit.py  pipeline.py
src/blog_pipeline/: __init__.py  ai_detector.py  audit.py  config.py  humanizer.py  humanizer_rules.default.yml  humanizer_rules.py  llm.py  pipeline.py  seo.py
src/blog_pipeline/backends/: __init__.py  base.py  contentful.py  filesystem.py  notion.py  postgres.py  supabase.py  wordpress.py
tests/: test_ai_detector.py  test_audit.py  test_backends.py  test_humanizer_rules.py  test_llm.py  test_pipeline.py  test_seo.py
