[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-pipeline"
version = "0.1.0"
description = "AI blog generator with 6-pass pipeline and built-in humanizer that removes AI writing tells."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["blog", "ai", "content", "anthropic", "humanizer", "seo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anthropic>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
blog-generate = "blog_pipeline.pipeline:main"
blog-audit    = "blog_pipeline.audit:main"
blog-humanize = "blog_pipeline.humanizer:_cli"
blog-pipeline = "blog_pipeline.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["blog_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/ownmy-app/blog-pipeline"
